--- a/spec/apps/Rakefile
+++ b/spec/apps/Rakefile
@@ -30,7 +30,7 @@ namespace :db do
     task :fix_plpgsql do
 
       lines_to_strike = [
-        "SET lock_timeout = 0;",
+        "SET lock_timeout = 0;", # lock_timeout is not compatible with Travis postgres
         "CREATE EXTENSION IF NOT EXISTS plpgsql WITH SCHEMA pg_catalog;",
         "COMMENT ON EXTENSION plpgsql IS 'PL/pgSQL procedural language';",
       ]
