explicit test script for Travis

--- a/.travis.yml
+++ b/.travis.yml
@@ -6,6 +6,7 @@ rvm:
 before_install:
   - gem install bundler -v 1.10.6
   - bin/setup
+script: "bundle exec rake"
 gemfile:
   - gemfiles/rails_4.2.4.gemfile
   - gemfiles/rails_3.2.22.gemfile
