--- a/.travis.yml
+++ b/.travis.yml
@@ -1,12 +1,12 @@
 language: ruby
 cache: bundler
 rvm:
-  - 2.1.2
+  - 2.1.5
   - 2.2.3
 before_install:
   - gem install bundler -v 1.10.6
   - bin/setup
-script: "bundle exec rake"
+script: "bundle exec rspec spec"
 gemfile:
   - gemfiles/rails_4.2.4.gemfile
   - gemfiles/rails_3.2.22.gemfile
