--- a/.travis.yml
+++ b/.travis.yml
@@ -7,6 +7,8 @@ rvm:
 before_install:
   - gem install bundler -v 1.10.6
   - bin/setup
+env:
+  - CELLULOID_DEBUG=true
 script: "bundle exec rspec spec"
 gemfile:
   - gemfiles/rails_4.2.4.gemfile
